+ Fixed spacing of the 'In Group of Type' badge (Fixes #908)

--- a/RockWeb/Styles/_blocks-crm.less
+++ b/RockWeb/Styles/_blocks-crm.less
@@ -340,11 +340,6 @@
     }
 }
 
-
-.badge-ingroupoftype {
-    width: 45px;
-}
-
 .badge-attendingduration {
     position: relative;
     color: #686576;
